# Django_HWs

./: .gitignore  Dockerfile  celery_results.sqlite3  configs.txt  db.sqlite3  pyproject.toml  requirements.txt  test_xml.xml  travis.yml
.github/workflows/: blank.yml
app/: celery.py  settings.py  urls.py  utils.py
home/: __init__.py  admin.py  apps.py  emails.py  forms.py  models.py  paginations.py  serializers.py  signals.py  tasks.py  test.py  tests.py  views.py  views_class.py
home/management/commands/: delete_students.py  insert_students10.py  select_students.py
home/migrations/: 0001_initial.py  0002_alter_student_address_alter_student_age_and_more.py  0003_student_social_url.py  0004_student_is_active_student_normalized_name.py  0005_alter_student_gender.py  0006_book_subject_student_book_student_subject_teacher.py  0007_alter_subject_id.py  0008_alter_book_id_alter_book_title_alter_student_id_and_more.py  0009_alter_book_id_alter_student_id_alter_subject_id_and_more.py  0010_alter_book_id_alter_student_id_alter_subject_id_and_more.py  0011_alter_student_book_alter_student_subject_and_more.py  0012_currency.py  0013_currency_ccy.py  0014_student_picture.py  0015_book_created_at_book_updated_at_student_created_at_and_more.py  0016_alter_book_created_at_alter_book_updated_at_and_more.py
home/templates/: base.html  book_list.html  book_update.html  index.html  send_email_test.html  sign_in.html  sign_up.html  start_page.html  student_form.html  student_update.html  subject_list.html  subject_update.html  teacher_list.html  teacher_update.html  trash.html
home/templatetags/: poll_extras.py
