[tool.poetry]
name = "appp"
version = "0.1.0"
description = ""
authors = ["Evhenii Podolian <alfan2620@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.12"
django = "5.0.1"
gender-guesser = "^0.4.0"
celery = "5.3.6"
flower = "^2.0.1"
django-extensions = "^3.2.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
faker = "^22.6.0"
flower = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
